# Doom64EX-SDL2

./: .gitignore  README.md
ports/uwp/: BUILD.md  CMakeLists.txt  CMakePresets.json  Package.appxmanifest  doom64ex-entry.cpp  main.cpp
ports/uwp/compat/: fluidlite_sdl_audio.c  fluidlite_sdl_audio.h  fluidsynth.h  uwp_crt_compat.h  uwp_glu.c  uwp_storage_root.c  uwp_storage_root.h  uwp_video.c  uwp_video.h  uwp_wad_launcher.cpp  uwp_wad_launcher.h
ports/uwp/compat/GL/: glu.h
src/kex/: CMakeLists.txt  d_event.h  d_net.c  defconfig.inc  doomtype.h  g_actions.c  g_actions.h  g_controls.h  g_game.c  gl_main.c  gl_main.h  i_audio.c  i_main.c  i_opndir.h  i_png.h  i_swap.h  i_system.c  i_system.h  i_video.c  i_video.h  m_fixed.c  m_menu.c  psnprntf.c  w_file.c
src/wadgen/: CMakeLists.txt  WadGen.h
